ghc-4335c07/testsuite/tests/typecheck/should_compile/tc002.hs
module ShouldSucceed where

b = if True then 1 else 2
