ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail031.hs
module ShouldFail where

f x = if 'a' then 1 else 2
